/*
 Copyright [2019] - [2021], PERSISTENCE TECHNOLOGIES PTE. LTD. and the persistenceSDK contributors
 SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";
package persistenceSDK.modules.liquidStaking;

option go_package = "github.com/persistenceOne/persistenceSDK/modules/liquidStaking/types";

import "gogoproto/gogo.proto";

service Msg {
  rpc AddChain(MsgAddChain) returns (MsgAddChainResponse);
}

message MsgAddChain {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string from_address = 1 [(gogoproto.moretags) = "yaml:\"from_address\""];
  string chainID = 2;
  string amount = 3 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"];
}

message MsgAddChainResponse {}