syntax = "proto3";
package orders.transactions.make;

import "x/ids/base/classificationID.proto";
import "x/ids/base/identityID.proto";
import "x/ids/base/anyOwnableID.proto";
import "x/lists/base/propertyList.proto";
import "x/types/base/height.proto";

message Message {
  string from = 1;
  ids.IdentityID from_i_d = 2;
  ids.ClassificationID classification_i_d = 3;
  ids.IdentityID taker_i_d = 4;
  ids.AnyOwnableID maker_ownable_i_d = 5;
  ids.AnyOwnableID taker_ownable_i_d = 6;
  types.Height expires_in = 7;
  string maker_ownable_split = 8;
  string taker_ownable_split = 9;
  lists.PropertyList immutable_meta_properties = 10;
  lists.PropertyList immutable_properties = 11;
  lists.PropertyList mutable_meta_properties = 12;
  lists.PropertyList mutable_properties = 13;
}